# faraway

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  create_card_image.py  pyproject.toml
faraway/: count_utils.py  data_structures.py  final_count.py  generate_image.py  load_cards.py  player_field.py  solo_play.py
icons/: generate_icons.py
